@@ -65,51 +65,35 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			
-<plugin>
-
-    <groupId>org.codehaus.mojo</groupId>
-
-    <artifactId>build-helper-maven-plugin</artifactId>
-
-    <version>1.3</version>
-
-    <executions>
-
-        <execution>
-
-            <id>add-source</id>
-
-            <phase>generate-sources</phase>
-
-            <goals>
-
-                <goal>add-source</goal>
-
-            </goals>
-
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <annotationProcessorPath>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.30</version>
+                        </annotationProcessorPath>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+                     <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-
-                <sources>
-
-                    <source>target/generated-soruces/annotations/metamodel</source>
-
-                </sources>
-
+                <argLine>--add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED</argLine>
             </configuration>
-
-        </execution>
-
-    </executions>
-
-</plugin>
-
-		</plugins>
-	</build>
+        </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
